<resources>
    <string name="app_name">Test App</string>
    <string name="hello_text">Hello</string>
    <string name="welcome_text">Welcome</string>
    <string name="loginEditTextHint">Login</string>
    <string name="passwordEditTextHint">Password</string>
    <string name="lastNameEditText">Last Name</string>
    <string name="firstNameEditText">First Name</string>
    <string name="passwordConfirmationEditTextHint">Password Confirmation</string>
    <string name="registerButtonText">Register</string>
    <string name="loginButtonText">Login</string>
</resources>